; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_x/extr_transaction.c_svn_fs_x__with_pack_lock.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_x/extr_transaction.c_svn_fs_x__with_pack_lock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pack_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_fs_x__with_pack_lock(i32* %0, i32* (i8*, i32*)* %1, i8* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32* (i8*, i32*)*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32* (i8*, i32*)* %1, i32* (i8*, i32*)** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32* %3, i32** %8, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i32, i32* @pack_lock, align 4
  %11 = load i32* (i8*, i32*)*, i32* (i8*, i32*)** %6, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = load i32*, i32** %8, align 8
  %14 = call i32 @create_lock_baton(i32* %9, i32 %10, i32* (i8*, i32*)* %11, i8* %12, i32* %13)
  %15 = load i32*, i32** %8, align 8
  %16 = call i32 @with_lock(i32 %14, i32* %15)
  %17 = call i32* @svn_error_trace(i32 %16)
  ret i32* %17
}

declare dso_local i32* @svn_error_trace(i32) #1

declare dso_local i32 @with_lock(i32, i32*) #1

declare dso_local i32 @create_lock_baton(i32*, i32, i32* (i8*, i32*)*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
